Slow framerate regression on monitor connected through USB dock (bisected to fa57924c76d9)
Brief summary of the problem:
The general symptom is slow framerate or choppy/laggy performance on monitors connected through a USB dock.
I bisected the issue on the stable tree.
To reproduce the issue, run mangohud eglgears_wayland
in Sway 1.10.
- On
fcf6a49d7992
, I see approx. 60fps (matching the refresh rate of the monitor). - On the next commit,
fa57924c76d9
, (and all subsequent commits tested) I see approx. 30fps.
This performance issue persists for all subsequent kernel versions I've tested, up to 6.11.4.
Hardware description:
- CPU:
AMD Ryzen 7 PRO 6850U with Radeon Graphics (family: 0x19, model: 0x44, stepping: 0x1)
- GPU:
04:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Rembrandt [Radeon 680M] [1002:1681] (rev d1)
- System Memory: 32G
- Display(s): Samsung LU28R55
- Type of Display Connection: HDMI, through USB-C dock.
- Laptop: ThinkPad P16s Gen 1
System information:
- Distro name and Version: Debian Testing
- Kernel version:
Linux thinky1 6.11.4-amd64 #1 SMP PREEMPT_DYNAMIC Debian 6.11.4-1 (2024-10-20) x86_64 GNU/Linux
- Custom kernel: n/a
- AMD official driver version: n/a (amdgpu)
How to reproduce the issue:
- Connect the monitor through the dock.
- Start sway.
- Open a terminal.
- Run
mangohud eglgears_wayland
. - See low framerate displayed by
mangohud
.
Note that there is no such issue on the laptop's built-in monitor. There I get 60fps.
Attached files:
Screenshots/video files
Last good commit (6.9.0-rc5-01612-gfcf6a49d7992)
First bad commit (6.9.0-rc5-01613-gfa57924c76d9)
Still broken with most recent stable kernel in Debian testing (6.11.4)
Log files (for system lockups / game freezes / crashes)
n/a
Edited by Scott Leggett